objects/Customer_Relationship_Map__c.object
<CustomObject>
    <fields>
        <fullName>Account_Plan__c</fullName>
        <label>Account Plan</label>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipLabel>Customer Relationship Maps</relationshipLabel>
        <relationshipName>Customer_Relationship_Maps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <label>Additional Information</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Aligned_HP_Exec__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Person at HP responsible for strengthening the relationship</inlineHelpText>
        <label>Aligned HP Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Relationship_Maps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>BU Scope of the contact:</label>
        <picklist>
            <controllingField>Scope_of_the_contact__c</controllingField>
            <picklistValues>
                <fullName>Applications and Business Solutions (ABS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autonomy/IM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise Security Products (ESP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graphics Solution Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPSD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Technology Outsourcing (ITO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Management (ITM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed Services (MPS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supplies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TS Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TS Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vertica</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Customer Relationship Maps</relationshipLabel>
        <relationshipName>Customer_Relationship_Maps</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EG_ESSN__c</fullName>
        <formula>IF(RM_S__c &lt;16, &quot;Potential Adversary&quot;, IF(AND(RM_S__c&gt;15,RM_S__c&lt;21) , &quot;Detractor&quot;, IF(AND(RM_S__c&gt;20,RM_S__c&lt;30),&quot; Neutral&quot;, IF(AND(RM_S__c&gt;29,RM_S__c&lt;37),&quot; Supporter&quot;, IF(RM_S__c&gt;36, &quot;Partner Ally&quot;, null)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is automatically populated when the survey below is completed.</inlineHelpText>
        <label>Relationship Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PP_S10__c</fullName>
        <label>PP_S10</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Somewhat Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Somewhat Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Agree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PP_S11__c</fullName>
        <label>PP_S11</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Somewhat Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Somewhat Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Agree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PP_S12__c</fullName>
        <label>PP_S12</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Somewhat Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Somewhat Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Agree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Parent_Contact__c</fullName>
        <label>Reports To</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RM_S10__c</fullName>
        <label>RM_S10</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Somewhat Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Somewhat Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Agree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RM_S1__c</fullName>
        <inlineHelpText>1 - Disagree
2 - Somewhat disagree 
3 - Somewhat agree
4 - Agree</inlineHelpText>
        <label>RM_S1</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Somewhat Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Somewhat Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Agree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RM_S2__c</fullName>
        <label>RM_S2</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Somewhat Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Somewhat Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Agree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <inlineHelpText>Executives set business direction
Consultants consult on acquisition/utilization (A/U) of products/services (P/S)
Financial Buyers evaluate/approve financial rationale for acquiring P/S
Enablers manage the process/infrastructure results from A/U of P/S</inlineHelpText>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Political Influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Buyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subject Matter Expert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Enabler</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Scope_of_the_contact__c</fullName>
        <label>BG Scope of the contact:</label>
        <picklist>
            <picklistValues>
                <fullName>EG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pan HP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>Contact__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <label>Customer Relationship Map</label>
    <nameField>
        <displayFormat>CRM-{0000}</displayFormat>
        <label>Customer Relationship Map Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Relationship Maps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>